<resources>
    <string name="app_name">Tomato Tapper</string>
    <string name="tomatoButton">Tomato</string>
    <string name="tomatoesText">0 Tomatoes</string>
    <string name="tpsText">0 Tomatoes Per Second</string>
    <string name="resetButton">Reset</string>
    <string name="resetConfirm">Type \"YES\" to confirm reset</string>
    <string name="tps">Tomatoes Per Second</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="fingersText">0 Fingers</string>
    <string name="gardensText">0 Gardens</string>
    <string name="orchardsText">0 Orchards</string>
    <string name="shipmentsText">0 Shipments</string>
    <string name="buyOne">Buy 1</string>
    <string name="notEnough">Insufficient Funds</string>
    <string name="fingersPrice">10</string>
    <string name="gardensPrice">100</string>
    <string name="orchardsPrice">1000</string>
    <string name="shipmentsPrice">10000</string>
    <string name="fingers">Fingers</string>
    <string name="gardens">Gardens</string>
    <string name="orchards">Orchards</string>
    <string name="shipments">Shipments</string>
    <string name="bought">Bought</string>
    <string name="maxedOut">You have bought the maximum amount of</string>
    <string name="gameReset">Game Reset</string>
</resources>
